--- a/index.css
+++ b/index.css
@@ -1,2 +1,229 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+html, body{
+    font-family: "Montserrat", sans-serif;
+    font-size: 10px;
+    margin: 0px;
+}
+h1{
+    font-size: 4rem;
+    font-weight: 800px;
+    margin: 0%;
+}
+h2{
+    font-size: 3.2rem;
+    font-weight: 600px;
+    margin: 0%;
+}
+h3{
+    font-size: 2.4rem;
+    font-weight: 700px;
+    margin: 0%;
+}
+p{
+    font-size: 2rem;
+    font-weight: 500px;
+    margin: 0%;
+}
+
+.header{
+    background-color: rgba(30, 30, 30, 0.50);;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem;
+    padding-left: 12rem;
+    padding-right: 12rem;
+}
+.header .logo img{
+    width: 20%;
+}
+.header .secciones {
+    font-size: 1.6rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 15%;
+    flex-wrap: nowrap;
+    padding: 0%;
+    list-style: none;
+}
+.header .secciones a{
+    color: white;
+    text-decoration: none;
+    display: flex;
+    flex-wrap: nowrap;
+}
+.header .secciones a:hover{
+    text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.95);
+}
+
+.inicio{
+    padding: 2rem;
+    height: 80rem;
+    background-color: black;
+}
+
+.quienes_somos_1{
+    padding-top: 20rem;
+    padding-left: 12rem;
+    padding-right: 12rem;
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+    background-color: #F2F2F2;
+
+}
+.quienes_somos_1 img{
+    width: 40rem;
+    border-radius: 3rem;
+}
+.quienes_somos_1 .qs-cont{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5rem;
+}
+.quienes_somos_1 .qs-text{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.quienes_somos_2{
+    padding: 12rem;
+    padding-top: 20rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 10rem;
+    background-color: #F2F2F2;
+}
+.quienes_somos_2 .qs2-img{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5rem;
+    justify-content: center;
+    
+}
+.quienes_somos_2 .qs2-text{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding-left: 20rem;
+    padding-right: 20rem;
+}
+
+
+.quienes_somos_2 .qs2-img img{
+    width: 25rem;
+    border-radius: 2rem;
+}
+.quienes_somos_2 .qs2-img .i1{
+    animation-duration: 2s;
+    animation-name: slidein;
+}
+.quienes_somos_2 .qs2-img .i2{
+    animation-duration: 2.1s;
+    animation-name: slidein;
+}
+.quienes_somos_2 .qs2-img .i3{
+    animation-duration: 2.2s;
+    animation-name: slidein;
+}
+.quienes_somos_2 .qs2-img .i4{
+    animation-duration: 2.3s;
+    animation-name: slidein;
+}
+.quienes_somos_2 .qs2-img .i5{
+    animation-duration: 2.4s;
+    animation-name: slidein;
+}
+
+.como_funciona{
+    background-color: black;
+    color: white;
+    padding: 12rem;
+}
+
+.trabajos{
+    background-color: #F2F2F2;
+    padding: 12rem;
+    display: flex;
+    flex-direction: column;
+    gap: 8rem;
+}
+.trabajos .trabajos-img{
+    display: flex;
+    flex-direction: row;
+    gap: 10rem;
+    justify-content: center;
+}
+.trabajos .trabajos-img img{
+    width: 35rem;
+    border-radius: 2rem;
+}
+.trabajos .trabajos-img img:hover{
+    width: 38rem;
+}
+.trabajos .trabajos-text{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+.trabajos .trabajos-img .cont1{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.innovacion{
+    padding: 12rem;
+    display: flex;
+    flex-direction: column;
+    gap: 8rem;
+}
+.innovacion .in-text{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.footer{
+    background-color: black;
+    color: #D9D9D9;
+    padding: 12rem;
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+.material-symbols-rounded {  
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+}
+
+.footer .f-text{
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    align-items: center;
+}
+
+
+@keyframes slidein {
+    from {
+        margin-bottom: 200%;
+        width: 30%;
+        }
+
+    }
+
+@media screen and (min-width: 1000px){
+
+}
