--- a/index.css
+++ b/index.css
@@ -59,9 +59,42 @@ p{
 }
 
 .inicio{
-    padding: 2rem;
-    height: 80rem;
+    padding: 12rem;
+    padding-top: 25rem;
     background-color: black;
+    color: #D9D9D9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20rem;
+}
+.inicio .countdown{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 15rem;
+    font-size: 2.5rem;
+}
+.inicio .countdown p{
+    font-size: 8.5rem;
+}
+.inicio .countdown .count-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.inicio .material-symbols-rounded{
+    font-size: 10rem;
+    padding: 0%;
+    margin: 0%;
+}
+.inicio .material-symbols-rounded a{
+    text-decoration: none;
+    color: #D9D9D9;
+}
+.inicio .material-symbols-rounded a:hover{
+    text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.95);
 }
 
 .quienes_somos_1{
