--- a/index.css
+++ b/index.css
@@ -27,13 +27,16 @@ p{
 }
 
 .header{
-    background-color: rgba(30, 30, 30, 0.50);;
+    background-color: rgba(0, 0, 0, 0.60);
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 2rem;
     padding-left: 12rem;
     padding-right: 12rem;
+    position: sticky;
+    top: 0;
+    z-index: 2;
 }
 .header .logo img{
     width: 20%;
@@ -61,12 +64,30 @@ p{
 .inicio{
     padding: 12rem;
     padding-top: 25rem;
-    background-color: black;
     color: #D9D9D9;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20rem;
+    position: relative;
+    z-index: 2;
+}
+.video-inicio video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.video-inicio .capa{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.5;
 }
 .inicio .countdown{
     display: flex;
@@ -187,7 +208,7 @@ p{
     gap: 8rem;
 }
 .trabajos .trabajos-img{
-    display: flex;
+top: 0;    display: flex;
     flex-direction: row;
     gap: 10rem;
     justify-content: center;
