--- a/index.css
+++ b/index.css
@@ -34,22 +34,25 @@ p{
     font-weight: 500px;
     margin: 0%;
 }
+.oculto{
+    display: none;
+}
 
 .header{
     background-color: rgba(0, 0, 0, 0.60);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 2rem 12rem;
+    padding: 1rem 12rem;
     position: sticky;
     top: 0;
     z-index: 4;
 }
 .header .logo img{
-    width: 20%;
+    width: 15%;
 }
 .header .secciones {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -71,9 +74,7 @@ p{
 .codigo{
     background-color: #C4C4C4;
     color: white;
-    position: fixed;
-    top: 0rem;
-    left: 0;
+    padding: 30rem 0rem;
     z-index: 3;
     width: 100%;
     height: 100%;
@@ -90,6 +91,7 @@ p{
     flex-direction: column;
     gap: 3rem;
     align-items: center;
+    padding-top: 10rem;
 }
 .cod-text span{
     font-size: 15rem;
@@ -165,7 +167,7 @@ p{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 120%;
     object-fit: cover;
 }
 .video-inicio .capa{
@@ -173,7 +175,7 @@ p{
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 120%;
     background-color: rgba(16, 72, 33, 0.2);
 
 }
@@ -219,7 +221,7 @@ p{
 
 .quienes_somos_1{
     padding: 12rem;
-    padding-top: 20rem;
+    padding-top: 40rem;
     display: flex;
     flex-direction: column;
     gap: 5rem;
@@ -500,11 +502,11 @@ span.resaltar{
         width: 100%;
     }
     .header{
-        padding: 2rem 2rem;
+        padding: 1.5rem 4rem;
 
     }
     .header .logo img{
-        width: 15%;
+        width: 12%;
     }
     .inicio .cuenta-atras{
         gap: 4rem;
@@ -532,7 +534,7 @@ span.resaltar{
         gap: 3rem;
     }
     .quienes_somos_1{
-        padding: 25rem 2rem;
+        padding: 40rem 2rem;
     }
     .qs-cont img{
         width: 100%;
@@ -581,6 +583,23 @@ span.resaltar{
     
     .footer{
         padding: 10rem 2rem;
+    }
+
+
+    .cod-text span{
+        font-size: 13rem;
+    }
+    .cod-text h2{
+        font-size: 3rem;
+    }
+    #codigo-section .clave-cont{
+        gap: 1rem;
+    }
+    .codigo{
+        padding: 30rem 0rem;
+    }
+    .codigo .cod-text{
+        padding-top: 0px;
     }
 
 }
