--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@
 }
 html, body{
     font-family: "Montserrat", sans-serif;
-    font-size: 10px;
+    font-size: 8px;
     margin: 0px;
     scroll-behavior: smooth;
 }
@@ -74,16 +74,15 @@ p{
 .codigo{
     background-color: #C4C4C4;
     color: white;
-    padding: 30rem 0rem;
+    padding: 20rem 0rem;
     z-index: 3;
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 12rem;
+    gap: 8rem;
     align-items: center;
     justify-content: center;
-    padding-top: 5rem;
 }
 .codigo .cod-text{
     color: var(--violeta);
@@ -91,15 +90,16 @@ p{
     flex-direction: column;
     gap: 3rem;
     align-items: center;
-    padding-top: 10rem;
 }
 .cod-text span{
-    font-size: 15rem;
+    font-size: 10rem;
 }
 .cod-text h2{
-    font-size: 4rem;
+    font-size: 2rem;
 }
-
+#codigo-section h3{
+    font-size: 2rem;
+}
 
 #codigo-section {
     text-align: center;
@@ -119,7 +119,7 @@ p{
 
 #codigo-input {
     padding: 1.5rem;
-    font-size: 3rem;
+    font-size: 2rem;
     text-align: center;
     margin: 0px;
     border-radius: 2rem;
@@ -151,14 +151,21 @@ p{
 
 
 .inicio{
-    padding-top: 25rem;  
+    padding-top: 25rem; 
+    text-align: center; 
+}
+.inicio .flecha span{
+    text-align: center;
+    z-index: 3;
+    position: relative;
+    padding-top: 10rem;
 }
 .inicio .in-contenido{
     color: #D9D9D9;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20rem;
+    gap: 10rem;
     position: relative;
     z-index: 2;
 }
@@ -167,7 +174,7 @@ p{
     top: 0;
     left: 0;
     width: 100%;
-    height: 120%;
+    height: 100%;
     object-fit: cover;
 }
 .video-inicio .capa{
@@ -175,7 +182,7 @@ p{
     top: 0;
     left: 0;
     width: 100%;
-    height: 120%;
+    height: 100%;
     background-color: rgba(16, 72, 33, 0.2);
 
 }
@@ -188,6 +195,8 @@ p{
 }
 .inicio h2{
     font-size: 2.5rem;
+    text-align: left;
+    padding-bottom: 2rem;
 }
 
 .inicio .cuenta-atras .grupo{
@@ -197,12 +206,12 @@ p{
 
 }
 .cuenta-atras .grupo p.grande{
-    font-size: 13rem;
+    font-size: 8rem;
     font-family: "Inter", sans-serif;
     font-weight: 600;
 }
 .cuenta-atras .grupo p.chico{
-    font-size: 4rem;
+    font-size: 2rem;
     font-weight: 200;
 }
 
@@ -534,7 +543,7 @@ span.resaltar{
         gap: 3rem;
     }
     .quienes_somos_1{
-        padding: 40rem 2rem;
+        padding: 50rem 2rem;
     }
     .qs-cont img{
         width: 100%;
