--- a/index.css
+++ b/index.css
@@ -545,6 +545,7 @@ span.resaltar{
     }
     .inicio .in-contenido{
         gap: 40rem;
+        padding: 35% 0%;
     }
 
     .quienes_somos_1 .qs-cont{
