--- a/index.css
+++ b/index.css
@@ -38,7 +38,70 @@ p{
     display: none;
 }
 
-.header{
+*{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+nav{
+    background-color: rgba(0, 0, 0, 0.60);
+    padding: 1rem 12rem;
+    width: 100%;
+    position: sticky;
+    top: 0;
+    z-index: 5;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo{
+    width: 8rem;
+}
+nav ul{
+    float: right;
+    margin-right: 20px;
+}
+.header .secciones {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex-wrap: nowrap;
+    padding: 0%;
+    list-style: none;
+    margin: 0;
+    gap: 2.5rem;
+}
+nav ul li{
+    margin: 0 5px;
+
+}
+nav ul li a{
+    color: white;
+    font-size: 1.3rem;
+    padding: 7px 13px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+li a:hover{
+    text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.95);
+    transition: .5s;
+}
+
+.checkbtn{
+    color: white;
+    cursor: pointer;
+    display: none;
+}
+#check{
+    display: none;
+}
+
+
+/* .header{
     background-color: rgba(0, 0, 0, 0.60);
     display: flex;
     align-items: center;
@@ -69,7 +132,7 @@ p{
 }
 .header .secciones a:hover{
     text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.95);
-}
+} */
 
 .codigo{
     background-color: #C4C4C4;
@@ -518,13 +581,66 @@ span.resaltar{
         font-size: 8px;
         width: 100%;
     }
+
+    .checkbtn{
+        display: block;
+        z-index: 5;
+    }
+    .checkbtn .material-symbols-rounded{
+        font-size: 6rem;
+    }
+    .enlace{
+        z-index: 5;
+    }
+    .logo{
+        width: 20%;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.85);
+        top: 0;
+        right: -100%;
+        text-align: center;
+        transition: all .5s;
+        
+    }
+    nav ul li{
+        display: block;
+        padding: 5rem 0;
+
+    }
+    nav ul li a{
+        font-size: 2rem;
+    }
+    #check:checked ~ ul{
+        right: 0;
+    }
+    .header .secciones {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        list-style: none;
+        margin: 0;
+        gap: 1rem;
+        z-index: 4;
+    }
     .header{
+        padding: 1.5rem 4rem;
+    }
+
+    /* .header{
         padding: 1.5rem 4rem;
 
     }
     .header .logo img{
         width: 12%;
-    }
+    } */
+
+
     .inicio {
         height: auto; /* Para que en pantallas pequeñas ajuste el tamaño */
     }
