--- a/index.css
+++ b/index.css
@@ -45,6 +45,8 @@ p{
     list-style: none;
     box-sizing: border-box;
 }
+
+/* ---------- HEADER ---------- */
 nav{
     background-color: rgba(0, 0, 0, 0.60);
     padding: 1rem 12rem;
@@ -56,7 +58,6 @@ nav{
     align-items: center;
     justify-content: space-between;
 }
-
 .logo{
     width: 8rem;
 }
@@ -76,7 +77,6 @@ nav ul{
 }
 nav ul li{
     margin: 0 5px;
-
 }
 nav ul li a{
     color: white;
@@ -85,12 +85,10 @@ nav ul li a{
     text-transform: uppercase;
     text-align: center;
 }
-
 li a:hover{
     text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.95);
     transition: .5s;
 }
-
 .checkbtn{
     color: white;
     cursor: pointer;
@@ -100,40 +98,7 @@ li a:hover{
     display: none;
 }
 
-
-/* .header{
-    background-color: rgba(0, 0, 0, 0.60);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem 12rem;
-    position: sticky;
-    top: 0;
-    z-index: 4;
-}
-.header .logo img{
-    width: 15%;
-}
-.header .secciones {
-    font-size: 1.3rem;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    gap: 15%;
-    flex-wrap: nowrap;
-    padding: 0%;
-    list-style: none;
-}
-.header .secciones a{
-    color: white;
-    text-decoration: none;
-    display: flex;
-    flex-wrap: nowrap;
-}
-.header .secciones a:hover{
-    text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.95);
-} */
-
+/* ---------- CÓDIGO DE INGRESO ---------- */
 .codigo{
     background-color: #C4C4C4;
     color: white;
@@ -163,7 +128,6 @@ li a:hover{
 #codigo-section h3{
     font-size: 2rem;
 }
-
 #codigo-section {
     text-align: center;
     display: flex;
@@ -179,7 +143,6 @@ li a:hover{
     align-items: center;
     justify-content: center;
 }
-
 #codigo-input {
     padding: 1.5rem;
     font-size: 2rem;
@@ -192,11 +155,9 @@ li a:hover{
     border-style: none;
     letter-spacing: 1rem;
 }
-
 #codigo-input:hover{
     border-color: var(--violeta);
 }
-
 #codigo-section #verificar-btn{
     margin: 0%;
     padding: 0%;
@@ -212,7 +173,7 @@ li a:hover{
     font-size: 5rem;
 }
 
-
+/* ---------- INICIO / CUENTA REGRESIVA ---------- */
 .inicio{
     margin: 0%; 
     text-align: center; 
@@ -220,7 +181,6 @@ li a:hover{
     position: relative; /* Asegura que la sección y su contenido se ubiquen correctamente */
     align-items: center;
 }
-
 .inicio .in-contenido{
     color: #D9D9D9;
     display: flex;
@@ -265,12 +225,10 @@ li a:hover{
     text-align: left;
     padding-bottom: 2rem;
 }
-
 .inicio .cuenta-atras .grupo{
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 .cuenta-atras .grupo p.grande{
     font-size: 8rem;
@@ -281,14 +239,12 @@ li a:hover{
     font-size: 2rem;
     font-weight: 200;
 }
-
 .inicio .flecha{
     text-align: center;
     z-index: 3;
     position: relative;
     padding: 10rem 0rem;
 }
-
 .inicio .material-symbols-rounded{
     font-size: 10rem;
     padding: 0%;
@@ -302,6 +258,7 @@ li a:hover{
     text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.95);
 }
 
+/* ---------- SECCIÓN QUIENES SOMOS 1 ---------- */
 .quienes_somos_1{
     padding: 12rem;
     padding-top: 20rem;
@@ -329,6 +286,7 @@ li a:hover{
     gap: 3rem;
 }
 
+/* ---------- SECCIÓN QUIENES SOMOS 2 ---------- */
 .quienes_somos_2{
     padding: 12rem;
     padding-top: 20rem;
@@ -355,11 +313,9 @@ li a:hover{
 .quienes_somos_2 .qs2-text h2{
     color: var(--violeta);
 }
-
 .qs2-img img{
     width: 18%;
 }
-
 .content {
     height: 100%;
     display: flex;
@@ -384,14 +340,12 @@ li a:hover{
     transform: translateY(200px);
     transition: opacity 0.5s ease, transform 0.8s ease;
 }
-
 .visible {
     opacity: 1;
     transform: translateY(0);
 }
 
-
-
+/* ---------- SECCIÓN CÓMO FUNCIONA ---------- */
 .como_funciona{
     background-color: #59387D;
     color: white;
@@ -400,12 +354,10 @@ li a:hover{
     flex-direction: column;
     gap: 5rem;
 }
-
 .swiper {
     width: 100%;
     height: 100%;
 }
-
 .swiper-slide {
     background-color: #F2F2F2;
     color: black;
@@ -426,7 +378,6 @@ li a:hover{
     gap: 2rem;
     box-sizing: border-box;
 }
-
 .card img{
     border-radius: 0px 7rem 0px 7rem;
     width: 100%;
@@ -448,6 +399,7 @@ span.resaltar{
     font-weight: 500;
 }
 
+/* ---------- SECCIÓN TRABAJOS ---------- */
 .trabajos{
     background: linear-gradient(160deg, #CAFFCA 13.24%, #D69FC8 112.99%);
     padding: 15rem 12rem;
@@ -486,7 +438,6 @@ span.resaltar{
     text-align: left;
     padding: 3rem;
 }
-
 .trabajos .trabajos-text{
     display: flex;
     flex-direction: column;
@@ -499,7 +450,7 @@ span.resaltar{
     color: var(--lila);
 }
 
-
+/* ---------- SECCIÓN INNOVACIÓN ---------- */
 .innovacion{
     padding: 12rem;
     display: flex;
@@ -517,7 +468,6 @@ span.resaltar{
 .innovacion h2{
     color: var(--lila);
 }
-
 .carrusel2 .swiper-slide{
     border-radius: 0%;
     height: 100%;
@@ -526,6 +476,7 @@ span.resaltar{
     border-radius: 0%;
 }
 
+/* ---------- FOOTER ---------- */
 .footer{
     background-color: #1E1E1E;
     color: #D9D9D9;
@@ -536,7 +487,6 @@ span.resaltar{
     flex-direction: column;
     gap: 3rem;
 }
-
 .material-symbols-rounded {  
     font-variation-settings:
     'FILL' 0,
@@ -544,7 +494,6 @@ span.resaltar{
     'GRAD' 0,
     'opsz' 24
 }
-
 .footer .f-text{
     display: flex;
     flex-direction: row;
@@ -562,15 +511,14 @@ span.resaltar{
         margin-bottom: 200%;
         width: 30%;
         }
-
     }
 
+/* ---------- MOBILE ---------- */
 
 @media screen and (min-width: 1001) {
     .mobile-only {
         display: none;
     }
-
     }
 
 @media screen and (max-width: 1000px) {
@@ -582,6 +530,7 @@ span.resaltar{
         width: 100%;
     }
 
+    /* --- HEADER --- */
     .checkbtn{
         display: block;
         z-index: 5;
@@ -604,12 +553,10 @@ span.resaltar{
         right: -100%;
         text-align: center;
         transition: all .5s;
-        
     }
     nav ul li{
         display: block;
         padding: 5rem 0;
-
     }
     nav ul li a{
         font-size: 2rem;
@@ -632,15 +579,24 @@ span.resaltar{
         padding: 1.5rem 4rem;
     }
 
-    /* .header{
-        padding: 1.5rem 4rem;
-
+    /* --- CÓDIGO DE INGRESO --- */
+    .cod-text span{
+        font-size: 13rem;
     }
-    .header .logo img{
-        width: 12%;
-    } */
+    .cod-text h2{
+        font-size: 3rem;
+    }
+    #codigo-section .clave-cont{
+        gap: 1rem;
+    }
+    .codigo{
+        padding: 30rem 0rem;
+    }
+    .codigo .cod-text{
+        padding-top: 0px;
+    }
 
-
+    /* --- INICIO / CUENTA REGRESIVA --- */
     .inicio {
         height: auto; /* Para que en pantallas pequeñas ajuste el tamaño */
     }
@@ -664,6 +620,7 @@ span.resaltar{
         padding: 35% 0%;
     }
 
+    /* --- SECCIÓN QUIENES SOMOS 1 --- */
     .quienes_somos_1 .qs-cont{
         display: flex;
         flex-direction: column;
@@ -678,6 +635,7 @@ span.resaltar{
         width: 100%;
     }
 
+    /* --- SECCIÓN QUIENES SOMOS 2 --- */
     .quienes_somos_2{
         padding: 15rem 2rem;
     }
@@ -696,11 +654,14 @@ span.resaltar{
     .scroll-section {
         gap: 10rem;
     }
+
+    /* --- SECCIÓN COMO FUNCIONA --- */
     .como_funciona{
         padding: 15rem 2rem;
         gap: 10rem;
     }
 
+    /* --- SECCIÓN TRABAJOS --- */
     .trabajos{
         padding: 15rem 2rem;
     }
@@ -712,30 +673,14 @@ span.resaltar{
         align-items: center;
     }
 
+    /* --- SECCIÓN INNOVACIÓN --- */
     .innovacion{
         padding: 15rem 2rem;
         gap: 10rem;
     }
     
+    /* --- SECCIÓN FOOTER --- */
     .footer{
         padding: 10rem 2rem;
     }
-
-
-    .cod-text span{
-        font-size: 13rem;
-    }
-    .cod-text h2{
-        font-size: 3rem;
-    }
-    #codigo-section .clave-cont{
-        gap: 1rem;
-    }
-    .codigo{
-        padding: 30rem 0rem;
-    }
-    .codigo .cod-text{
-        padding-top: 0px;
-    }
-
 }
