--- a/index.css
+++ b/index.css
@@ -120,8 +120,8 @@ li a:hover{
     gap: 3rem;
     align-items: center;
 }
-.cod-text span{
-    font-size: 12rem;
+.cod-text .material-symbols-rounded{
+    width: 13rem;
 }
 .cod-text h2{
     font-size: 3rem;
@@ -171,7 +171,7 @@ li a:hover{
     color: var(--violeta);
 }
 #verificar-btn .material-symbols-rounded{
-    font-size: 5rem;
+    width: 5rem;
 }
 
 /* ---------- INICIO / CUENTA REGRESIVA ---------- */
@@ -245,19 +245,23 @@ li a:hover{
     z-index: 3;
     position: relative;
     padding: 18rem 0rem;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.inicio .material-symbols-rounded{
-    font-size: 10rem;
-    padding: 0%;
-    margin: 0%;
+
+.flecha .flecha-hover{
+    width: 15rem;
+    object-fit: cover;
+    transition: opacity 0.3s ease;
 }
-.inicio .material-symbols-rounded a{
-    text-decoration: none;
-    color: #D9D9D9;
+.flecha .flecha-hover:hover{
+    content: url(./assets/iconos/flecha2.png);
+    width: 11rem;
+    object-fit: cover;
 }
-.inicio .material-symbols-rounded a:hover{
-    text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.95);
-}
+
 
 /* ---------- SECCIÓN QUIENES SOMOS 1 ---------- */
 .quienes_somos_1{
@@ -502,9 +506,8 @@ span.resaltar{
     gap: 2rem;
     align-items: center;
 }
-.f-text span{
-    color: var(--lila);
-    font-size: 3rem;
+.f-text .material-symbols-rounded{
+    width: 3rem;
 }
 
 
@@ -538,7 +541,7 @@ span.resaltar{
         z-index: 5;
     }
     .checkbtn .material-symbols-rounded{
-        font-size: 4rem;
+        width: 4rem;
     }
     .enlace{
         z-index: 5;
